--- a/UniTask/Assembly-CSharp.csproj
+++ b/UniTask/Assembly-CSharp.csproj
@@ -62,7 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Test.cs" />
+    <Compile Include="Assets\Script\TaskCanceller.cs" />
+    <Compile Include="Assets\Script\Test.cancelOld.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Script\Test.cancelDisable.cs" />
     <Compile Include="Assets\Script\GameNet.cs" />
   </ItemGroup>
   <ItemGroup>
