--- a/UniTask/Assembly-CSharp.csproj
+++ b/UniTask/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\Script\Test.cs" />
     <Compile Include="Assets\Script\TaskCanceller.cs" />
+    <Compile Include="Assets\Script\Test.exception.cs" />
     <Compile Include="Assets\Script\Test.cancelOld.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Script\Test.cancelDisable.cs" />
